[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.8.4"
# candle-core = { path = "../candle/candle-core"}
candle-examples = "0.8.4"
# candle-examples = { path = "../candle/candle-examples"}
candle-nn = "0.8.4"
# candle-nn = { path = "../candle/candle-nn"}
candle-transformers = "0.8.4"
# candle-transformers = { path = "../candle/candle-transformers"}
serde_json = "1.0.140"
hf-hub = "0.4.2"
tokenizers = "0.21.1"
anyhow = "1.0.97"
clap = { version = "4.2.4", features = ["derive"] }
